plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)' // ForgeGradle 6.x pro 1.21.x
    id 'eclipse'
    id 'maven-publish'
}

group = 'com.example'
version = '2.0.1'
archivesBaseName = 'wolfchunkloader'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

minecraft {
    // Oficiální Mojang mappings
    mappings channel: 'official', version: '1.21.1'

    runs {
        server {
            workingDirectory project.file('run')
            mods {
                wolfchunkloader {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    // Forge maven je přidán automaticky Forge pluginem
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.21.1-52.1.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

jar {
    manifest {
        attributes([
            "Specification-Title": "wolfchunkloader",
            "Specification-Vendor": "example",
            "Implementation-Title": project.name,
            "Implementation-Version": project.version,
            "Implementation-Vendor": "example"
        ])
    }
}
